=== xdg-utils 1.x.x ====

2009-08-25 Fathi Boudra <fabo@freedesktop.org>
   * Apply patch form Mike Mammarella <mdm@chromium.org> to fix 2 issues:
     - skip invisible desktop files when looking up the default web browser in
       GNOME. (http://codereview.chromium.org/159738)
     - check for localized settings by hand in xdg-settings if kreadconfig
       fails. (http://codereview.chromium.org/160376)

2009-08-10 Fathi Boudra <fabo@freedesktop.org>
    * Replace kfmclient by kioclient usage under KDE 4.
      Thanks to Nicolas Lécureil <neoclust@mandriva.org>

2009-08-03 Fathi Boudra <fabo@freedesktop.org>
    * Remove fixup_mandriva_categories() function. It is not needed anymore
      since a year. Thanks to Nicolas Lécureil <neoclust@mandriva.org>

2009-07-29 Fathi Boudra <fabo@freedesktop.org>
    * Merge xdg-settings utility: a script to get various settings from
      the desktop environment. Thanks to Dan Kegel and Google Inc.

2009-07-29 Fathi Boudra <fabo@freedesktop.org>
    * Fix hardcoded path in make_default_kde() in xdg-mime unde KDE 3.
      Add initial KDE 4 support to the function.

2009-07-28 Fathi Boudra <fabo@freedesktop.org>
    * Use kbuildsycoca4 under KDE 4 and kbuildsycoca under KDE 3.

2009-07-28 Fathi Boudra <fabo@freedesktop.org>
    * Use kmimetypefinder under KDE 4 and kfile under KDE 3.

2009-07-28 Fathi Boudra <fabo@freedesktop.org>
    * Add KDE 4 support to xdg-mime. kdetradertest was replaced by
      ktraderclient under KDE 4. (BR22975)

2009-07-27 Fathi Boudra <fabo@freedesktop.org>
    * Remove -u option from su. It doesn't have it.

2009-07-27 Fathi Boudra <fabo@freedesktop.org>
    * Add KDE 4 support to xdg-email (BR17268)

2009-07-26 Fathi Boudra <fabo@freedesktop.org>
    * Sleep for 50s instead of 59s to avoid to froze the seesion (BR19414)

2009-07-26 Fathi Boudra <fabo@freedesktop.org>
    * Fix a race condition in xdg-screensaver (BR19382)

2009-07-26 Fathi Boudra <fabo@freedesktop.org>