@@ -644,7 +644,7 @@ make_lazy_default()
     local mimetypes
     local xdg_user_dir
     local xdg_default_dirs
-    
+
     DEBUG 1 "make_lazy_default $1/$2"
     mimetypes=`awk '
 {
@@ -657,7 +657,7 @@ make_lazy_default()
         }
     }
 }' "$1/$2" 2> /dev/null`
-    
+
     for MIME in $mimetypes ; do
         xdg_default_dirs="$XDG_DATA_DIRS"
         [ -n "$xdg_default_dirs" ] || xdg_default_dirs=/usr/local/share/:/usr/share/
@@ -714,7 +714,7 @@ update_submenu()
     xdg_user_dir="$xdg_user_dir/applications-merged"
     xdg_global_dir="$xdg_global_dir/applications-merged"
 
-    DEBUG 3 "Install locations for *.menu file:" 
+    DEBUG 3 "Install locations for *.menu file:"
     DEBUG 3 "xdg_user_dir: $xdg_user_dir"
     DEBUG 3 "xdg_global_dir: $xdg_global_dir"
     DEBUG 3 "kde_user_dir: $kde_user_dir"
@@ -777,7 +777,7 @@ update_submenu()
             mkdir -p `dirname "$kde_xdg_dir"`
             eval 'ln -s "applications-merged" "$kde_xdg_dir"'$xdg_redirect_output
         fi
-    fi        
+    fi
     if [ $action = "install" -a x"$mode" = x"system" -a -d "/etc/xdg/menus/kde-applications-merged" -a ! -d "/etc/xdg/menus/applications-merged" ] ; then
         # Work around for Kubuntu 6.06
         kde_xdg_dir=`echo "$xdg_dir" | sed -e 's^/applications-merged^/kde-applications-merged^'`
@@ -832,9 +832,9 @@ BEGIN {
         done
     fi
     rm -f "$tmpfile"
-    
+
     DEBUG 3 "Files to list in $menu_file: $new_desktop_files"
-    
+
     if [ -n "$new_desktop_files" ] ; then
         # Install/update
         test "${TMPDIR+set}" = set || TMPDIR=/tmp
@@ -864,10 +864,10 @@ BEGIN {
                 echo "</Menu>"
             done
 
-            echo '</Menu>'                        
+            echo '</Menu>'
         ) > $tmpfile
         chmod $my_chmod $tmpfile
-    
+
         save_umask=`umask`
         umask $my_umask
 
@@ -880,7 +880,7 @@ BEGIN {
         # Uninstall
         rm -f $xdg_dir/$menu_file
     fi
-    
+
     # Uninstall .directory files only if no longer referenced
     if [ $action = "uninstall" ] ; then
         test "${TMPDIR+set}" = set || TMPDIR=/tmp
@@ -898,7 +898,7 @@ BEGIN {
   }
 }' $menu_file >> $tmpfile
             fi
-        done 
+        done
         orig_directory_files="$directory_files"
         directory_files=
         for desktop_file in $orig_directory_files; do
@@ -962,7 +962,7 @@ while [ $# -gt 0 ] ; do
           system)
             mode="system"
             ;;
-            
+
           *)
             exit_failure_syntax "unknown mode '$1'"
             ;;
@@ -1075,7 +1075,7 @@ for x in `echo $xdg_system_dirs | sed 's/:/ /g'` ; do
     fi
 done
 
-DEBUG 3 "Install locations for *.directory files:" 
+DEBUG 3 "Install locations for *.directory files:"
 DEBUG 3 "xdg_user_dir: $xdg_user_dir"
 DEBUG 3 "xdg_global_dir: $xdg_global_dir"
 DEBUG 3 "kde_user_dir: $kde_user_dir"
@@ -1142,15 +1142,15 @@ for x in `echo $xdg_system_dirs | sed 's/:/ /g'` ; do
     fi
 done
 
-kde_user_dir="$HOME/.kde/share/applnk"
-kde_global_dir="/usr/share/applnk"
+kde_user_dir=`kde${KDE_SESSION_VERSION}-config --path apps | cut -d ':' -f 1`
+kde_global_dir=`kde${KDE_SESSION_VERSION}-config --path apps | cut -d ':' -f 2`
 [ -w $kde_global_dir ] || kde_global_dir=
 
 gnome_user_dir="$HOME/.gnome/apps"
 gnome_global_dir="/usr/share/gnome/apps"
 [ -w $gnome_global_dir ] || gnome_global_dir=
 
-DEBUG 3 "Install locations for *.desktop files:" 
+DEBUG 3 "Install locations for *.desktop files:"
 DEBUG 3 "xdg_user_dir: $xdg_user_dir"
 DEBUG 3 "xdg_global_dir: $xdg_global_dir"
 DEBUG 3 "kde_user_dir: $kde_user_dir"
@@ -1199,7 +1199,7 @@ for desktop_file in $desktop_files; do
             if [ -f $gnome_dir/$basefile ] ; then
                 echo "OnlyShowIn=Old;" >> $gnome_dir/$basefile
             fi
-            
+
             make_lazy_default "$xdg_dir" "$basefile"
 
             umask $save_umask
